src/objects/Account_Create_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>AccountCountry__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Country_Code_2_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Fax__c</fullName>
        <label>Account Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <inlineHelpText>Be sure to fill this in if this is a new Account!</inlineHelpText>
        <label>Account Name (Practice Name)</label>
        <length>76</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_only_if_New__c</fullName>
        <label>Account Name (only if New)</label>
        <length>76</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_OneSF_ID__c</fullName>
        <formula>Existing_Account__r.OneSF_Id__c</formula>
        <label>Account OneSF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone_Number__c</fullName>
        <label>Account Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_if_Existing__c</fullName>
        <formula>CASE( Existing_Account__r.RecordTypeId ,&quot;01220000000DiSB&quot;, &quot;Clinical Customer&quot;,&quot;01220000000DiSf&quot;, &quot;Clinical Prospect&quot;,&quot;0120J000000cmd3&quot;, &quot;DNA Distributor&quot;,&quot;0120J000000cmcy&quot;, &quot;DNA End User&quot;,&quot;0120J000000cmd8&quot;, &quot;DNA Internal&quot;,&quot;OTHER&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type if Existing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Account_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <formula>CASE( Status__c , &quot;Created&quot;, IMAGE(&quot;/resource/1444678382000/NACAMPSTATUSSUBMIT&quot;,
 &quot;Not Submitted&quot;,120,215), 
&quot;Submitted&quot;,IMAGE(&quot;/resource/1444678335000/NACAMPSTATUSPENDING&quot;, &quot;Submitted&quot;,90,170), 
&quot;Processing&quot;,IMAGE(&quot;/resource/1444678335000/NACAMPSTATUSPENDING&quot;, &quot;Submitted&quot;,90,170), 
&quot;Completed&quot;,IMAGE(&quot;/resource/1444678363000/NACAMPSTATUSAPPROVED&quot;, &quot;Completed&quot;,70,70),
&quot;Rejected&quot;, Image(&quot;/resource/1444678681000/NACAMPREJECTED&quot;, &quot;Rejected&quot;, 50,120),&quot;UNKNOWN&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAccountName__c</fullName>
        <label>Billing Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStateProvince__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertifiedEmail__c</fullName>
        <label>Certified Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChangedOrganisationNumber__c</fullName>
        <formula>if( or(ISBLANK( Existing_Account__c ),
ISBLANK(  OrganisationNumber__c  )),false,
if( OrganisationNumber__c &lt;&gt;  Old_OrganisationNumber__c  ,True,False))</formula>
        <label>Changed Organisation Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Account_Name__c</fullName>
        <formula>If( or(ISBLANK( Existing_Account__c ),ISBLANK(Account_Name__c )),false,if( Account_Name__c &lt;&gt;  Old_Account_Name__c ,True,False))</formula>
        <label>Changed Account Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Account_Type__c</fullName>
        <formula>If( or(ISBLANK( Existing_Account__c ),ISBLANK(text(Account_Type__c))),false, if(text(Account_Type__c) &lt;&gt; text(Existing_Account__r.OneAccount_Type__c),True,False))</formula>
        <label>Changed Account Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Address__c</fullName>
        <formula>if( or(ISBLANK( Existing_Account__c ),CompleteVisitingAddress__c==&quot;, , , , &quot;) ,False,
IF( or(
Country__c &lt;&gt; Old_BillingCountry__c ,
Postal_Zip_Code__c&lt;&gt; Old_BillingPostalCode__c ,
City__c&lt;&gt; Old_BillingCity__c ,
StreetAddress__c &lt;&gt; Old_BillingStreet__c ,
State_Province__c &lt;&gt; Old_BillingState__c ),
True,False))</formula>
        <label>Changed Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Parent_Account__c</fullName>
        <formula>if(or( ISBLANK( Existing_Account__c ),isblank( Parent_Account__c )),False, if( Parent_Account__r.Id &lt;&gt;  Existing_Account__r.Parent.Id  , True,False))</formula>
        <label>Changed Parent Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Phone__c</fullName>
        <formula>If( or(ISBLANK( Existing_Account__c ),
ISBLANK( Account_Phone_Number__c  )),false,
if(  Account_Phone_Number__c &lt;&gt;  Old_Phone__c  ,True,False))</formula>
        <label>Changed Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changed_Specialty__c</fullName>
        <formula>If(
OR(ISBLANK( Existing_Account__c ),ISBLANK(text(Specialty__c))), false, 
if(text(Specialty__c) &lt;&gt; Old_Specialty__c ,True,False)
)</formula>
        <label>Changed Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CimId__c</fullName>
        <formula>TEXT(Existing_Account__r.CIM360Id__c)</formula>
        <label>Cim Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompleteVisitingAddress__c</fullName>
        <formula>StreetAddress__c &amp; &quot;, &quot; &amp; City__c &amp; &quot;, &quot; &amp;  State_Province__c &amp; &quot;, &quot; &amp; Postal_Zip_Code__c &amp; &quot;, &quot; &amp; Country__c</formula>
        <label>Complete Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>To set the Country of the Account Requested</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_TERR_ID__c</fullName>
        <formula>CreatedBy.Movex_Uer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By TERR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_My_Direct_Reports__c</fullName>
        <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
        <label>Created by My Direct Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_SBU__c</fullName>
        <formula>CreatedBy.User_SBU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_me__c</fullName>
        <formula>IF(CreatedById == $User.Id, TRUE, FALSE)</formula>
        <label>Created by me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatorTeam__c</fullName>
        <formula>TEXT(CreatedBy.Team__c)</formula>
        <label>Creator Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Country__c</fullName>
        <formula>text(CreatedBy.User_Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyISOCode__c</fullName>
        <description>New currency code that the account should have</description>
        <label>Account Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_ISO_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DestinationCode__c</fullName>
        <description>unique Account Verification Code - registered on the Taxes agency (by the supplier)
to be specified in the invoice</description>
        <label>Destination Code</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Existing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Create_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identity_Management_Notes_on_Account__c</fullName>
        <label>Identity Management Notes on Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Account Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MethodofPayement__c</fullName>
        <label>Method of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_AccountCountry__c</fullName>
        <label>Old Account Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Account_Name__c</fullName>
        <description>Original Account Name during creation of the Change Request. [ACR 2.0]</description>
        <label>Old Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Account_Type__c</fullName>
        <label>Old Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_BillingCity__c</fullName>
        <description>Original City during creation of the Change Request. [ACR 2.0]</description>
        <label>Old City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_BillingCountry__c</fullName>
        <description>Original Country during creation of the Change Request. [ACR 2.0]</description>
        <label>Old Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_BillingPostalCode__c</fullName>
        <description>Original Postal Code during creation of the Change Request. [ACR 2.0]</description>
        <label>Old Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_BillingState__c</fullName>
        <description>Original State during creation of the Change Request. [ACR 2.0]</description>
        <label>Old State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_BillingStreet__c</fullName>
        <description>Original Street during creation of the Change Request. [ACR 2.0]</description>
        <label>Old Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CurrencyIsoCode__c</fullName>
        <description>Original CurrencyIsoCode during creation of the Change Request. [ACR 2.0]</description>
        <label>Old CurrencyIsoCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_OrganisationNumber__c</fullName>
        <label>Old Organisation Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ParentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Requests (Old Parent Account)</relationshipLabel>
        <relationshipName>Account_RequestsParentAcc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Phone__c</fullName>
        <description>Original Phone during creation of the Change Request. [ACR 2.0]</description>
        <label>Old Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Postal_Code_Info__c</fullName>
        <description>Original Postal Code Info during creation of the Change Request. [ACR 2.0]</description>
        <label>Old Postal Code Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ShippingCity__c</fullName>
        <description>Original ShippingCity during creation of the Change Request. [ACR 2.0]</description>
        <label>TODEL_Old City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ShippingCountry__c</fullName>
        <description>Original ShippingCountry during creation of the Change Request. [ACR 2.0]</description>
        <label>TODEL_Old Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ShippingPostalCode__c</fullName>
        <description>Original ShippingPostalCode during creation of the Change Request. [ACR 2.0]</description>
        <label>TODEL_Old Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ShippingState__c</fullName>
        <description>Original ShippingState during creation of the Change Request. [ACR 2.0]</description>
        <label>TODEL_Old State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_ShippingStreet__c</fullName>
        <description>Original ShippingStreet during creation of the Change Request. [ACR 2.0]</description>
        <label>TODEL_Old Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Specialty__c</fullName>
        <label>Old Specialty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganisationNumber2__c</fullName>
        <label>Organisation Number (#2)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganisationNumber__c</fullName>
        <label>Organisation Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Requests (Parent Account)</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentTypes__c</fullName>
        <label>Payment Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BANK RECEIPT</fullName>
                </value>
                <value>
                    <fullName>TRANSFER</fullName>
                </value>
                <value>
                    <fullName>DIRECT REMITTANCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlaceofResidency__c</fullName>
        <label>Place of Residency (If Resident)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Zip_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practitioner_ID_NPI_in_US__c</fullName>
        <label>Practitioner ID (NPI in US)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceiveTrackingOrdersbyEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Tracking Orders by Email ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceiveaCourtesyCopybyEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive a Courtesy Copy by Email ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceivetheOrderSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive the Order Summary ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Info Change</fullName>
                </value>
                <value>
                    <fullName>Account Linking CIM360</fullName>
                </value>
                <value>
                    <fullName>All Stop</fullName>
                </value>
                <value>
                    <fullName>Create New Account</fullName>
                    <default>true</default>
                    <label>Create New Account</label>
                </value>
                <value>
                    <fullName>Create New ERP Account</fullName>
                </value>
                <value>
                    <fullName>Parent/Child Grouping</fullName>
                </value>
                <value>
                    <fullName>Pending Order</fullName>
                </value>
                <value>
                    <fullName>Reopen Account</fullName>
                </value>
                <value>
                    <fullName>Sales Issue</fullName>
                </value>
                <value>
                    <fullName>Account Linking</fullName>
                    <isActive>false</isActive>
                    <label>Account Linking</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Change Request</fullName>
                </value>
                <value>
                    <fullName>Account Creation Request</fullName>
                    <default>true</default>
                    <label>Account Creation Request</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryEmail__c</fullName>
        <description>EMAIL COPIA CORTESIA</description>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ShippingAccountName__c</fullName>
        <label>Shipping Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <description>ACR 2.0</description>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <description>ACR 2.0</description>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <description>ACR 2.0</description>
        <label>Shipping Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <description>ACR 2.0</description>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <description>ACR 2.0</description>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Account_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Air Force</fullName>
                </value>
                <value>
                    <fullName>Army</fullName>
                </value>
                <value>
                    <fullName>B2B/Indirect</fullName>
                </value>
                <value>
                    <fullName>B2C/Direct</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Bureau of Indian Affairs</fullName>
                </value>
                <value>
                    <fullName>Coast Guard</fullName>
                </value>
                <value>
                    <fullName>Community College</fullName>
                </value>
                <value>
                    <fullName>Community Dental Health</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Correctional Facility</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Crown &amp; Bridge Laboratory</fullName>
                </value>
                <value>
                    <fullName>Dealer Sell Out Data Region</fullName>
                </value>
                <value>
                    <fullName>Dental Association</fullName>
                </value>
                <value>
                    <fullName>Dental Clinic</fullName>
                </value>
                <value>
                    <fullName>Dental Laboratory</fullName>
                </value>
                <value>
                    <fullName>Dental Office</fullName>
                </value>
                <value>
                    <fullName>Dental School</fullName>
                </value>
                <value>
                    <fullName>Dental Specialist</fullName>
                </value>
                <value>
                    <fullName>Dental Technician School</fullName>
                </value>
                <value>
                    <fullName>Dentsply</fullName>
                </value>
                <value>
                    <fullName>DentsplySirona</fullName>
                </value>
                <value>
                    <fullName>Denture Clinic</fullName>
                </value>
                <value>
                    <fullName>Denture Laboratory</fullName>
                </value>
                <value>
                    <fullName>Denturists</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Discontinued</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartUpPractice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start Up Practice</label>
        <referenceTo>StartUpPractice__c</referenceTo>
        <relationshipLabel>Account Requests</relationshipLabel>
        <relationshipName>Account_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_License_Number__c</fullName>
        <description>Used in North America to capture the state license number of a contact, similar to an NPI number</description>
        <label>State License Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Licensure__c</fullName>
        <label>State Licensure</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>States_North_America</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreetAddress__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitForApproval__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Submits the Change Request for Approval if checked</description>
        <inlineHelpText>Submits the Change Request for Approval if checked</inlineHelpText>
        <label>Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <defaultValue>CASE($User.User_Country__c,  
&quot;Australia&quot;,&quot;Australia&quot;,
&quot;Austria&quot;,&quot;Austria&quot;,
&quot;Belarus&quot;,&quot;Belarus&quot;,
&quot;Belgium&quot;,&quot;Belgium&quot;,
&quot;Brazil&quot;,&quot;Brazil&quot;,
&quot;Canada&quot;, &quot;Canada&quot;,
&quot;China&quot;,&quot;China&quot;,
&quot;Denmark&quot;,&quot;Denmark&quot;,
&quot;Finland&quot;,&quot;Finland&quot;,
&quot;France&quot;,&quot;France&quot;,
&quot;Germany&quot;,&quot;Germany&quot;,
&quot;Holland&quot;,&quot;Holland&quot;,
&quot;Hong Kong&quot;,&quot;Hong Kong&quot;,
&quot;India&quot;,&quot;India&quot;,
&quot;Indonesia&quot;,&quot;Indonesia&quot;,
&quot;Italy&quot;,&quot;Italy&quot;,
					&quot;U.A.E&quot;,&quot;U.A.E&quot;,
&quot;Kuwait&quot;,&quot;Kuwait&quot;,
&quot;Egypt&quot;,&quot;Egypt&quot;,
&quot;Jordan&quot;,&quot;Jordan&quot;,
&quot;Algeria&quot;,&quot;Algeria&quot;,
&quot;Tunisia&quot;,&quot;Tunisia&quot;,
&quot;Cameroun&quot;,&quot;Cameroun&quot;,
&quot;Senegal&quot;,&quot;Senegal&quot;,
&quot;Oman&quot;,&quot;Oman&quot;,
&quot;Iran&quot;,&quot;Iran&quot;,
&quot;Iraq&quot;,&quot; Iraq&quot;,
&quot;Libya&quot;,&quot;Libya&quot;,
&quot;Yemen&quot;,&quot;Yemen&quot;,
&quot;Bahrain&quot;,&quot;Bahrain&quot;,
&quot;Mauritius&quot;,&quot;Mauritius&quot;,
&quot;Maldives&quot;,&quot;Maldives&quot;,
&quot;Japan&quot;,&quot;Japan&quot;,
&quot;Kazakhstan&quot;,&quot;Kazakhstan&quot;,
&quot;Lebanon&quot;,&quot;Lebanon&quot;,
&quot;Luxembourg&quot;,&quot;Luxembourg&quot;,
&quot;Malaysia&quot;,&quot;Malaysia&quot;,
&quot;Morocco&quot;,&quot;Morocco&quot;,
&quot;New Zealand&quot;,&quot;New Zealand&quot;,
&quot;Norway&quot;,&quot;Norway&quot;,
&quot;Philippines&quot;,&quot;Philippines&quot;,
&quot;Portugal&quot;,&quot;Portugal&quot;,
&quot;Poland&quot;,&quot;Poland&quot;,
&quot;Russia&quot;,&quot;Russia&quot;,
&quot;Saudi Arabia&quot;,&quot;Saudi Arabia&quot;,
&quot;Singapore&quot;,&quot;Singapore&quot;,
&quot;Slovakia&quot;,&quot;Slovakia&quot;,
&quot;South Africa&quot;,&quot;South Africa&quot;,
&quot;South Korea&quot;,&quot;South Korea&quot;,
&quot;Spain&quot;,&quot;Spain&quot;,
&quot;Sweden&quot;,&quot;Sweden&quot;,
&quot;Switzerland&quot;,&quot;Switzerland&quot;,
&quot;Taiwan&quot;,&quot;Taiwan&quot;,
&quot;Thailand&quot;,&quot;Thailand&quot;,
&quot;Turkey&quot;,&quot;Turkey&quot;,
&quot;UAE&quot;,&quot;UAE&quot;,
&quot;UK&quot;, &quot;UK&quot;,
&quot;Ukraine&quot;, &quot;Ukraine&quot;,
&quot;USA&quot;,&quot;USA&quot;,
&quot;Vietnam&quot;,&quot;Vietnam&quot;,
&quot;HQ: SE&quot;)</defaultValue>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_full</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>YearofGraduation_studentAccts__c</fullName>
        <label>Year of Graduation (Student Accts)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPORequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PO required on orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ofProfessionals__c</fullName>
        <label># of Professionals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofUnits__c</fullName>
        <label># of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Request</label>
    <listViews>
        <fullName>ANZ_Account_Maintenance_Team_Account_Create_Change_Request</fullName>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>ANZ: Account Maintenance Team</label>
        <queue>ANZ_Account_Maintenance_Team</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>ANZ_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Acct_MaintenancePendingACRs</fullName>
        <columns>Creator_Country__c</columns>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Request_Type__c</columns>
        <columns>Comments__c</columns>
        <columns>Created_by_SBU__c</columns>
        <columns>Created_By_TERR_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Created,Completed,Rejected</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>All Stop,Create New Account,Pending Order</value>
        </filters>
        <filters>
            <field>Creator_Country__c</field>
            <operation>equals</operation>
            <value>USA,Canada</value>
        </filters>
        <label>NA: Acct MaintenancePendingACRs</label>
        <sharedTo>
            <group>NA_Account_Maintenance_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>